# respite

./: .SRCINFO  .cppcheck-false-positives  .gitignore  NEWS  PKGBUILD  README.md  meson.build  meson_options.txt
data/: meson.build  org.gnome.Respite.gschema.xml
data/desktop/: meson.build  org.gnome.Respite.desktop.in.in
data/icons/: meson.build
data/interfaces/: mediachooser.ui  meson.build  open-location.ui  playlist.ui  plugins.ui  respite-settings.ui  respite.gresource.xml  respite.ui  save-playlist.ui
data/metainfo/: meson.build  org.gnome.Respite.appdata.xml.in  org.xfce.Parole.appdata.xml.in
data/mime/: meson.build
docs/plugin-api/: meson.build
po/: POTFILES.in
src/: main.c  meson.build  org.respite.media.list.xml  org.respite.media.player.xml  parole-about.c  respite-about.c  respite-about.h  respite-builder.c  respite-builder.h  respite-button.c  respite-button.h  respite-conf-dialog.c  respite-conf-dialog.h  respite-conf.c  respite-conf.h  respite-disc.c  respite-disc.h  respite-mediachooser.c  respite-mediachooser.h  respite-medialist.c  respite-medialist.h  respite-module.c  respite-module.h  respite-mpd.py  respite-open-location.c  respite-open-location.h  respite-player.c  respite-player.h  respite-playlist.py  respite-plugin-player.c  respite-plugin-player.h  respite-plugins-manager.c  respite-plugins-manager.h  respite-shortcuts.c  respite-shortcuts.h  respite-subtitle-encoding.c  respite-subtitle-encoding.h  respite-utils.c  respite-utils.h  respite-vis.c  (+1 more)
src/common/: meson.build  respite-common.c  respite-common.h  respite-powermanager.c  respite-powermanager.h  respite-rc-utils.c  respite-rc-utils.h  respite-screensaver.c  respite-screensaver.h
src/dbus/: meson.build  respite-dbus.c  respite-dbus.h
src/gst/: meson.build  respite-gst.c  respite-gst.h
src/misc/: meson.build  respite-debug.c  respite-debug.h  respite-file.c  respite-file.h  respite-filters.c  respite-filters.h  respite-pl-parser.c  respite-pl-parser.h  respite-provider-player.c  respite-provider-player.h  respite-provider-plugin.c  respite-provider-plugin.h  respite-stream.c  respite-stream.h  respite.h.in
src/plugins/mpris2/: meson.build  mpris2-plugin.c  mpris2-provider.c  mpris2-provider.h  mpris2.desktop.in
src/plugins/notify/: meson.build  notify-plugin.c  notify-provider.c  notify-provider.h  notify.desktop.in
src/plugins/sample/: meson.build  sample-plugin.c  sample-provider.c  sample-provider.h
src/plugins/tray/: meson.build  system-tray.desktop.in  tray-plugin.c  tray-provider.c  tray-provider.h
